--- a/index.html
+++ b/index.html
@@ -33,13 +33,36 @@
         <span class="header__icon">
           <i class="fas fa-search"></i>
         </span>
-        <span class="header__icon"></span>
-        <i class="fas fa-comment"></i>
+        <span class="header__icon">
+          <i class="fas fa-comment"></i>
+        </span>
         <span class="header__icon">
           <i class="fas fa-cog"></i>
         </span>
       </div>
     </header>
+    <main class="chats">
+      <ul class="chats__list">
+        <li class="chats__chat chat">
+          <img class="chat__avatar" src="images/avatar.jpg" />
+          <div class="chat__column">
+            <div class="chat__content">
+              <span class="chat__username">
+                Lynn
+              </span>
+              <span class="chat__preview">
+                Going home!
+              </span>
+            </div>
+          </div>
+          <div class="chat__column">
+            <span class="chat__timestap">
+              Yesterday
+            </span>
+          </div>
+        </li>
+      </ul>
+    </main>
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__list-item">
