--- a/more.html
+++ b/more.html
@@ -33,8 +33,9 @@
         <span class="header__icon">
           <i class="fas fa-search"></i>
         </span>
-        <span class="header__icon"></span>
-        <i class="fas fa-comment"></i>
+        <span class="header__icon">
+          <i class="fas fa-comment"></i>
+        </span>
         <span class="header__icon">
           <i class="fas fa-cog"></i>
         </span>
